# translate-java-property-files

./: .trivyignore  CHANGELOG.md  README.md  action.yml  config.example.yaml  glossary.example.json  init.sh  llms.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run-local-translation.sh  update-service.sh  update-translations.sh
.github/workflows/: build-verify.yml
docker/: .env.example  config.docker.yaml  docker-compose.yml  docker-entrypoint.sh
docs/: adding-new-locales.md  github-action.md  index.html  localization-cli.md  new-format-checklist.md  new-project-deployment.md  repository-structure.md
docs/assets/: site.css
examples/generic-java-properties/: README.md  config.yaml
examples/generic-json/: README.md  config.yaml  glossary.json
examples/generic-json/resources/: messages.json  messages_de.json
localize/: __init__.py  app_config.py  bootstrap_pr.py  cli.py  ignore_keys.py  init_config.py  localization_formats.py  model_provider.py  semantic_remediation.py  translate_localization_files.py  translation_memory.py  translation_quality_gate.py  translation_semantic_reviewer.py
profiles/bisq/: config.yaml
profiles/bisq-mobile/: config.yaml  glossary.json
scripts/: check-translation-services.sh
src/: app_config.py  cli.py  connectors.py  init_config.py  locale_utils.py  localization_adapters.py  localization_formats.py  localization_layouts.py  localization_profiles.py  model_provider.py  openai_compat.py  pipeline_core.py  placeholder_rules.py  semantic_quality.py  translate_localization_files.py  translation_prompts.py  translation_quality_gate.py  translation_semantic_reviewer.py  translation_validator.py
src/core/: __init__.py
src/formats/: __init__.py  testing.py
src/providers/: __init__.py
tests/: conftest.py
tests/integration/: test_quote_escaping.py  test_translate_localization_files.py
tests/unit/: test_adapter_conformance.py  test_adapter_registry.py  test_app_config.py  test_bootstrap_pr.py  test_cli.py  test_config_quality.py  test_connectors.py  test_core_logic.py  test_docker_entrypoint.py  test_docs_site.py  test_github_action.py  test_holistic_review_protection.py  test_ignore_keys.py  test_init_config.py  test_json_localization_adapter.py  test_locale_utils.py  test_localization_formats.py  test_localization_layouts.py  test_localization_profiles.py  test_model_provider.py  test_openai_compat.py  test_per_key_validation.py  test_pipeline_core.py  test_placeholder_rules.py  test_provider_capabilities.py  test_public_api.py  test_semantic_quality.py  test_semantic_remediation.py  test_translation_memory.py  test_translation_prompt.py  test_translation_quality_gate.py  test_translation_semantic_reviewer.py  test_update_translations_script.py
