[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "localize-pipeline"
version = "0.1.0"
description = "Reusable AI localization translation pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Internationalization",
]
dependencies = [
  "aiolimiter",
  "aisuite==0.1.14",
  "GitPython",
  "httpx",
  "jsonschema",
  "openai",
  "python-dotenv",
  "python-slugify",
  "PyYAML",
  "requests",
  "tiktoken",
  "tqdm",
]

[project.scripts]
localize = "localize.cli:main"

[project.urls]
Repository = "https://github.com/bisq-network/translate-java-property-files"
Changelog = "https://github.com/bisq-network/translate-java-property-files/blob/main/CHANGELOG.md"
Issues = "https://github.com/bisq-network/translate-java-property-files/issues"

[tool.setuptools.packages.find]
include = ["localize*"]
