[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "localize-pipeline"
version = "0.1.2"
description = "Agent-friendly AI localization pipeline that translates Java properties and JSON into pull requests"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ai", "agents", "i18n", "l10n", "localization", "translation", "github-actions"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Internationalization",
]
dependencies = [
  "aiolimiter",
  "aisuite==0.1.14",
  "GitPython",
  "httpx",
  "jsonschema",
  "openai",
  "python-dotenv",
  "python-slugify",
  "PyYAML",
  "requests",
  "tiktoken",
  "tqdm",
]

[project.scripts]
localize = "localize.cli:main"

[project.urls]
Repository = "https://github.com/bisq-network/localize-pipeline"
Changelog = "https://github.com/bisq-network/localize-pipeline/blob/main/CHANGELOG.md"
Issues = "https://github.com/bisq-network/localize-pipeline/issues"

[tool.setuptools.packages.find]
include = ["localize*"]
